[package]
name = "mango"
description = "The Mango programming language (UNDER CONSTRUCTION)"
version = "0.6.0"
authors = ["Mark <mverleg.noreply@gmail.com>"]
homepage = "https://mangocode.org/"
license = "Apache-2.0"
edition = "2018"
publish = true
include = [
    "src/**/*",
    "Cargo.toml"
]

[[bin]]
name = "mango"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
serde_json = "1.0.64"
dirs = "3.0.1"
whoami = "1.1.2"
structopt = { version = "^0.3.15" , features = [ "paw" ] }
lazy_static = "1.4.0"
ws = "0.9.1"
log = "0.4.14"
async-std = "1.9.0"
env_logger = "0.8.3"
paw = "^1.0.0"

[dev-dependencies]
serial_test = "0.5.1"
tempfile = "3.2.0"


