[package]
name = "mango"
description = "The Mango programming language (UNDER CONSTRUCTION)"
# Note: until version 0.4.0, the crates.io 'mango' crate was what since 0.5.0 is 'mangolib'
version = "0.6.0"
authors = ["Mark <mverleg.noreply@gmail.com>"]
homepage = "https://mangocode.org/"
license = "Apache-2.0"
edition = "2018"
publish = true
include = [
    "src/**/*",
    "Cargo.toml"
]

[[bin]]
name = "mango"
path = "src/main.rs"

[dependencies]
structopt = { version = "^0.3.15" , features = [ "paw" ] }
paw = "^1.0.0"
#lazy_static = "^1.4.0"

[dev-dependencies]

