[package]
name = "mango"
description = "The Mango programming language (UNDER CONSTRUCTION)"
# Note: until version 0.4.0, the crates.io 'mango' crate was what since 0.5.0 is 'mangolib'
version = "0.6.0"
authors = ["Mark <mverleg.noreply@gmail.com>"]
homepage = "https://mangocode.org/"
license = "Apache-2.0"
edition = "2018"
publish = true
include = [
    "src/**/*",
    "Cargo.toml"
]

[lib]
name = "mango_cli_api"
path = "src/lib.rs"

[dependencies]

[dev-dependencies]

[profile.release]
lto = true
opt-level = 'z'

[profile.dev.package."*"]
opt-level = 3
debug = false
