[package]
name = "mango-cli-api"
description = "API between the Mango programming language CLI and daemon"
version = "0.6.0"
authors = ["Mark <mverleg.noreply@gmail.com>"]
homepage = "https://mangocode.org/"
license = "Apache-2.0"
edition = "2018"
publish = true
include = [
    "src/**/*",
    "Cargo.toml"
]

[lib]
name = "mango_cli_api"
path = "src/lib.rs"

[dependencies]

[dev-dependencies]

