[package]
name = "mango-cli-common"
description = "API between the Mango programming language CLI and daemon"
version = "0.6.0"
authors = ["Mark <mverleg.noreply@gmail.com>"]
homepage = "https://mangocode.org/"
license = "Apache-2.0"
edition = "2018"
publish = true
include = [
    "src/**/*",
    "Cargo.toml"
]

[lib]
name = "mango_cli_common"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
serde_json = "1.0.64"
dirs = "3.0.1"

[dev-dependencies]
serial_test = "0.5.1"


