[package]
name = "mango-cli-daemon"
description = "Daemon for the Mango programming language CLI"
version = "0.6.0"
authors = ["Mark <mverleg.noreply@gmail.com>"]
homepage = "https://mangocode.org/"
license = "Apache-2.0"
edition = "2018"
publish = true
include = [
    "src/**/*",
    "Cargo.toml"
]

[[bin]]
name = "mangod"
path = "src/main.rs"

[dependencies]
#mangolib = { path = "../compiler" }
mangolib = "0.6.0"
structopt = { version = "^0.3.15" , features = [ "paw" ] }
paw = "^1.0.0"
#lazy_static = "^1.4.0"

ws = { version = "0.7.*" }
chrono = { version = "0.4.*" }
log = { version = "0.4.*" }
env_logger = { version = "0.5.*" }

[dev-dependencies]

